# Multi-LLM-Privacy-Framework

./: README.md  pyproject.toml  requirements.txt
examples/: v1_basic_usage.py  v2_unit_test.py
protocols/: base.py  privacy_protocol.py  utils.py
protocols/clients/: __init__.py  ollama_client.py  openai_client.py
protocols/prompts/: audit.py  core.py  error_handling.py  interaction.py
tests/: test_ollama_client.py  test_openai_client.py
