[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Multi-LLM-Privacy-Framework"
version = "0.1.0"
description = "A scalable and secure communication framework for privacy-aware interactions between multiple LLMs."
authors = [
    { name = "Your Name", email = "viper7882@yahoo.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.1.14",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/viper7882/Multi-LLM-Privacy-Framework"
